--- a/Distiller-server/pom.xml
+++ b/Distiller-server/pom.xml
@@ -7,25 +7,85 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>com.mapr.distiller</groupId>
+	<packaging>jar</packaging>
 	<artifactId>Distiller-server</artifactId>
+
+	<properties>
+		<jdk.version>1.7</jdk.version>
+		<xmlrpc.version>3.1.3</xmlrpc.version>
+	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.xmlrpc</groupId>
 			<artifactId>xmlrpc-client</artifactId>
-			<version>3.1.3</version>
+			<version>${xmlrpc.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.xmlrpc</groupId>
 			<artifactId>xmlrpc-server</artifactId>
-			<version>3.1.3</version>
+			<version>${xmlrpc.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.xmlrpc</groupId>
 			<artifactId>xmlrpc-common</artifactId>
-			<version>3.1.3</version>
+			<version>${xmlrpc.version}</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<finalName>distiller-server-0.0.1-SNAPSHOT</finalName>
+		<plugins>
+
+			<!-- download source code in Eclipse, best practice -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>false</downloadJavadocs>
+				</configuration>
+			</plugin>
+
+			<!-- Set a compiler level -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
+				</configuration>
+			</plugin>
+
+			<!-- Maven Shade Plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<!-- Run shade goal on package phase -->
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<!-- add Main-Class to manifest file -->
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>SystemMonitor</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+		</plugins>
+	</build>
 </project>
