--- a/Distiller-server/pom.xml
+++ b/Distiller-server/pom.xml
@@ -85,7 +85,7 @@
 								<!-- add Main-Class to manifest file -->
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>SystemMonitor</mainClass>
+									<mainClass>Coordinator</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
