Resume, Suspend and Kill actions for MetricAction implemented

--- a/Distiller-server/src/main/resources/distiller.conf
+++ b/Distiller-server/src/main/resources/distiller.conf
@@ -1,6 +1,6 @@
 distiller {
-
     metric1 {
+        id = "Metric 1"
     	name = "Metric 1"
         recordtype = "SystemCpuRecord"
         description = SystemCpuRecord is System Cpu Record
@@ -15,6 +15,7 @@ distiller {
     }
 
     metric2 {
+        id = "Metric 2"
     	name = "Metric 2"
         recordtype = "SystemMemoryRecord"
         description = SystemMemory Record is System memory Record 
