Again, fixing the default distiller.con

--- a/Distiller-server/src/main/resources/distiller.conf
+++ b/Distiller-server/src/main/resources/distiller.conf
@@ -109,23 +109,23 @@ distiller {
 	output.queue.max.producers = 1
 	input.record.selector = sequential
 	input.record.processor.name = SystemMemoryRecordProcessor
-	input.record.processor.method = movingAverage 
+	input.record.processor.method = merge 
 	periodicity.ms = 1000
 	metric.action.status.records.enabled = true
 	metric.action.status.record.frequency = 5000
     }
     cummSystemMemory-1s {
 	metric.name = "CummSystemMemory-1s"
-	metric.description = "Produces cummulative SystemMemoryRecord objects from differential SystemMemoryRecordObjects at 1 second interval"
+	metric.description = "Produces cumulative SystemMemoryRecord objects from differential SystemMemoryRecordObjects at 1 second interval"
 	input.queue.name = "DiffSystemMemory-1s"
 	record.type = "SystemMemory"
 	output.queue.name = "CummSystemMemory-1s"
         output.queue.capacity.records = 600
 	output.queue.capacity.seconds = 600
 	output.queue.max.producers = 1
-	input.record.selector = cummulative
+	input.record.selector = cumulative
 	input.record.processor.name = SystemMemoryRecordProcessor
-	input.record.processor.method = movingAverage
+	input.record.processor.method = merge
 	periodicity.ms = 1000
 	metric.action.status.records.enabled = true
 	metric.action.status.record.frequency = 5000
