A bunch of additional stuff. Updated distiller.conf with many additional metrics.  All metrics are implemented/tested using the code in this checkin.

--- a/Distiller-server/src/main/resources/distiller.conf
+++ b/Distiller-server/src/main/resources/distiller.conf
@@ -1,4 +1,7 @@
 distiller {
+    #
+    # Enable collection of raw metrics from ProcRecordProducer and MfsGutsRecordProducer
+    #
     rawSystemCpu-1s {
         metric.name = "RawSystemCpu-1s"
         metric.description = "Produces raw SystemCpuRecord objects based on samples of CPU counters taken from /proc/stat every 1 second"
@@ -98,6 +101,13 @@ distiller {
 	output.queue.capacity.seconds = 600
 	raw.producer.metrics.enabled = false
     }
+
+    #
+    # Distill SystemMemoryRecords for 1 second periods that show any of the following conditions:
+    # 1. >95% physical memory usage 
+    # 2. >0 pages swapped in or out
+    # 3. >0 instances of alloc stall
+    #
     diffSystemMemory-1s {
 	metric.name = "DiffSystemMemory-1s"
 	metric.description = "Produces differential SystemMemoryRecord objects from raw SystemMemoryRecord objects at 1 second interval"
@@ -111,43 +121,321 @@ distiller {
 	input.record.processor.name = SystemMemoryRecordProcessor
 	input.record.processor.method = merge 
 	periodicity.ms = 1000
-	metric.action.status.records.enabled = true
-	metric.action.status.record.frequency = 5000
-    }
-    cummSystemMemory-1s {
-	metric.name = "CummSystemMemory-1s"
-	metric.description = "Produces cumulative SystemMemoryRecord objects from differential SystemMemoryRecordObjects at 1 second interval"
-	input.queue.name = "DiffSystemMemory-1s"
-	record.type = "SystemMemory"
-	output.queue.name = "CummSystemMemory-1s"
-        output.queue.capacity.records = 600
-	output.queue.capacity.seconds = 600
-	output.queue.max.producers = 1
-	input.record.selector = cumulative
-	input.record.processor.name = SystemMemoryRecordProcessor
-	input.record.processor.method = merge
-	periodicity.ms = 1000
-	metric.action.status.records.enabled = true
-	metric.action.status.record.frequency = 5000
     }
     highSystemMemory-1s {
-	metric.name = "HighSystemMemory-1s-90%"
-	metric.description = "Produces differential SystemMemoryRecord objects where RAM utilization is > 90% at 1 second interval"
+	metric.name = "HighSystemMemory-1s-95%"
+	metric.description = "Produces differential SystemMemoryRecord objects where RAM utilization is > 95% at 1 second interval"
 	input.queue.name = "DiffSystemMemory-1s"
 	record.type = SystemMemory
-	output.queue.name = "HighSystemMemory-1s-90%"
+	output.queue.name = "SystemMemoryEvents-1s"
 	output.queue.capacity.records = 600
 	output.queue.capacity.seconds = 600
-	output.queue.max.producers = 1
+	output.queue.max.producers = 4
 	input.record.selector = sequential
 	input.record.processor.name = SystemMemoryRecordProcessor
 	input.record.processor.method = isBelow
 	threshold.key = "%free"
-	threshold.value = 0.1
+	threshold.value = 0.05
 	periodicity.ms = 1000
-	metric.action.status.records.enabled = true
-	metric.action.status.record.frequency = 5000
     }
+    pagesSwappedIn-1s {
+	metric.name = "pagesSwappedIn-1s"
+	metric.description = "Produces differential SystemMemoryRecord objects where pswpin is > 0"
+	input.queue.name = "DiffSystemMemory-1s"
+	record.type = SystemMemory
+	output.queue.name = "SystemMemoryEvents-1s"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 4
+	input.record.selector = sequential
+	input.record.processor.name = SystemMemoryRecordProcessor
+	input.record.processor.method = isNotEqual
+	threshold.key = "pswpin"
+	threshold.value = 0
+	periodicity.ms = 1000
+    }
+    pagesSwappedOut-1s {
+	metric.name = "pagesSwappedOut-1s"
+	metric.description = "Produces differential SystemMemoryRecord objects where pswpout is > 0"
+	input.queue.name = "DiffSystemMemory-1s"
+	record.type = SystemMemory
+	output.queue.name = "SystemMemoryEvents-1s"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 4
+	input.record.selector = sequential
+	input.record.processor.name = SystemMemoryRecordProcessor
+	input.record.processor.method = isNotEqual
+	threshold.key = "pswpout"
+	threshold.value = 0
+	periodicity.ms = 1000
+    }
+    allocstall-1s {
+	metric.name = "allocstall-1s"
+	metric.description = "Produces differential SystemMemoryRecord objects where allocstall is > 0"
+	input.queue.name = "DiffSystemMemory-1s"
+	record.type = SystemMemory
+	output.queue.name = "SystemMemoryEvents-1s"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 4
+	input.record.selector = sequential
+	input.record.processor.name = SystemMemoryRecordProcessor
+	input.record.processor.method = isNotEqual
+	threshold.key = "allocstall"
+	threshold.value = 0
+	periodicity.ms = 1000
+    }
+
+    #
+    # Distill SystemCpuRecords for 1 second periods that show system-wide CPU usage >95%
+    #
+    diffSystemCpu-1s {
+	metric.name = "DiffSystemCpu-1s"
+	metric.description = "Produces differential SystemCpuRecord objects from raw SystemCpuRecord objects at 1 second interval"
+	input.queue.name = "RawSystemCpu-1s"
+	record.type = SystemCpu
+	output.queue.name = "DiffSystemCpu-1s"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequential
+	input.record.processor.name = SystemCpuRecordProcessor
+	input.record.processor.method = merge 
+	periodicity.ms = 1000
+    }
+    highSystemCpu-1s {
+	metric.name = "HighSystemCpu-1s-95%"
+	metric.description = "Produces differential SystemCpuRecord objects where CPU utilization is > 95% at 1 second interval"
+	input.queue.name = "DiffSystemCpu-1s"
+	record.type = SystemCpu
+	output.queue.name = "SystemCpuEvents-1s"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequential
+	input.record.processor.name = SystemCpuRecordProcessor
+	input.record.processor.method = isBelow
+	threshold.key = "%idle"
+	threshold.value = 0.05
+	periodicity.ms = 1000
+    }
+
+    #
+    # Distill DiskstatRecords for 1 second periods that show device utilization at >95%
+    #
+    diffDiskstat-1s {
+	metric.name = "DiffDiskstat-1s"
+	metric.description = "Produces differential DiskstatRecord objects from raw DiskstatRecord objects at 1 second interval"
+	input.queue.name = "RawDiskstat-1s"
+	record.type = Diskstat
+	output.queue.name = "DiffDiskstat-1s"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequentialWithQualifier
+	selector.qualifier.key = "device_name"
+	input.record.processor.name = DiskstatRecordProcessor
+	input.record.processor.method = merge 
+	periodicity.ms = 1000
+    }
+    highDeviceUtilization-1s {
+	metric.name = "HighDeviceUtilization-1s-95%"
+	metric.description = "Produces differential DiskstatRecord objects where device utilization is > 95% at 1 second interval"
+	input.queue.name = "DiffDiskstat-1s"
+	record.type = Diskstat
+	output.queue.name = "DiskEvents-1s"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequential
+	input.record.processor.name = DiskstatRecordProcessor
+	input.record.processor.method = isAbove
+	threshold.key = "utilizationPct"
+	threshold.value = 0.95
+	periodicity.ms = 1000
+    }
+
+    #
+    # Distill NetworkInterfaceRecords for 1 second periods that show any of the following conditions:
+    # 1. >90% RX or TX utilization 
+    # 2. half duplex
+    # 3. no carrier
+    # 4. speed is set to less than 1000Mbps
+    # 5. TX queue length is < 1000
+    # 6. Any number of collisions, drops or errors
+    #
+    diffNetworkInterface-1s {
+	metric.name = "DiffNetworkInterface-1s"
+	metric.description = "Produces differential NetworkInterfaceRecord objects from raw NetworkInterfaceRecord objects at 1 second interval"
+	input.queue.name = "RawNetworkInterface-1s"
+	record.type = NetworkInterface
+	output.queue.name = "DiffNetworkInterface-1s"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequentialWithQualifier
+	selector.qualifier.key = "name"
+	input.record.processor.name = NetworkInterfaceRecordProcessor
+	input.record.processor.method = merge 
+	periodicity.ms = 1000
+    }
+    highNetworkInterfaceRXUtilization-1s {
+	metric.name = "HighNetworkInterfaceRXUtilization-1s-90%"
+	metric.description = "Produces differential NetworkInterfaceRecord objects where RX utilization is > 90% at 1 second interval"
+	input.queue.name = "DiffNetworkInterface-1s"
+	record.type = NetworkInterface
+	output.queue.name = "NetworkInterfaceEvents-1s"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 3
+	input.record.selector = sequential
+	input.record.processor.name = NetworkInterfaceRecordProcessor
+	input.record.processor.method = isAbove
+	threshold.key = "rxUtilizationPct"
+	threshold.value = 0.9
+	periodicity.ms = 1000
+    }
+    highNetworkInterfaceTXUtilization-1s {
+	metric.name = "HighNetworkInterfaceTXUtilization-1s-90%"
+	metric.description = "Produces differential NetworkInterfaceRecord objects where TX utilization is > 90% at 1 second interval"
+	input.queue.name = "DiffNetworkInterface-1s"
+	record.type = NetworkInterface
+	output.queue.name = "NetworkInterfaceEvents-1s"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 3
+	input.record.selector = sequential
+	input.record.processor.name = NetworkInterfaceRecordProcessor
+	input.record.processor.method = isAbove
+	threshold.key = "txUtilizationPct"
+	threshold.value = 0.9
+	periodicity.ms = 1000
+    }
+    NetworkInterfaceHasProblems-1s {
+	metric.name = "NetworkInterfaceHasProblems-1s-90%"
+	metric.description = "Produces differential NetworkInterfaceRecord objects where any of a variety of problems are found on the interface"
+	input.queue.name = "DiffNetworkInterface-1s"
+	record.type = NetworkInterface
+	output.queue.name = "NetworkInterfaceEvents-1s"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 3
+	input.record.selector = sequential
+	input.record.processor.name = NetworkInterfaceRecordProcessor
+	input.record.processor.method = isEqual
+	threshold.key = "hasProblems"
+	threshold.value = true
+	periodicity.ms = 1000
+    }
+
+    #
+    # Generate differential ProcessResourceRecords
+    # These records are generally only of interest when a bottleneck is identified at a system level and usage of that resource needs to be viewed broken down by process
+    #
+    diffProcessResource-60s {
+	metric.name = "DiffProcessResource-60s"
+	metric.description = "Produces differential ProcessResourceRecord objects from raw ProcessResourceRecord objects at 60 second interval"
+	input.queue.name = "RawProcessResource-60s"
+	record.type = ProcessResource
+	output.queue.name = "DiffProcessResource-60s"
+	output.queue.capacity.records = 65536
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequentialWithQualifier
+	selector.qualifier.key = "pid"
+	input.record.processor.name = ProcessResourceRecordProcessor
+	input.record.processor.method = merge 
+	periodicity.ms = 10000
+    }
+
+    #
+    # Generate differential SlimProcessResourceRecords
+    # These records are generally only of interest when a bottleneck is identified at a system level and usage of that resource needs to be viewed broken down by process
+    #
+    diffSlimProcessResource-1s {
+	metric.name = "DiffSlimProcessResource-1s"
+	metric.description = "Produces differential SlimProcessResourceRecord objects from raw SlimProcessResourceRecord objects at 1 second interval"
+	input.queue.name = "RawSlimProcessResource-1s"
+	record.type = SlimProcessResource
+	output.queue.name = "DiffSlimProcessResource-1s"
+	output.queue.capacity.records = 65536
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequentialWithQualifier
+	selector.qualifier.key = "pid"
+	input.record.processor.name = SlimProcessResourceRecordProcessor
+	input.record.processor.method = merge 
+	periodicity.ms = 1000
+    }
+
+    #
+    # Generate differential ThreadResourceRecords
+    # These records are generally only of interest when a bottleneck is identified at a system level and usage of that resource needs to be viewed broken down by process
+    #
+    diffThreadResource-60s {
+	metric.name = "DiffThreadResource-60s"
+	metric.description = "Produces differential ThreadResourceRecord objects from raw ThreadResourceRecord objects at 1 second interval"
+	input.queue.name = "RawThreadResource-60s"
+	record.type = ThreadResource
+	output.queue.name = "DiffThreadResource-60s"
+	output.queue.capacity.records = 65536
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequentialWithQualifier
+	selector.qualifier.key = "pid"
+	input.record.processor.name = ThreadResourceRecordProcessor
+	input.record.processor.method = merge 
+	periodicity.ms = 10000
+    }
+
+    #
+    # Generate differential SlimThreadResourceRecords
+    # These records are generally only of interest when a bottleneck is identified at a system level and usage of that resource needs to be viewed broken down by process
+    #
+    diffSlimThreadResource-1s {
+	metric.name = "DiffSlimThreadResource-1s"
+	metric.description = "Produces differential SlimThreadResourceRecord objects from raw SlimThreadResourceRecord objects at 1 second interval"
+	input.queue.name = "RawSlimThreadResource-1s"
+	record.type = SlimThreadResource
+	output.queue.name = "DiffSlimThreadResource-1s"
+	output.queue.capacity.records = 65536
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequentialWithQualifier
+	selector.qualifier.key = "pid"
+	input.record.processor.name = SlimThreadResourceRecordProcessor
+	input.record.processor.method = merge 
+	periodicity.ms = 1000
+    }
+
+    #
+    # Generate differential TcpConnectionStatRecords that indicate the length of time a TCP connection was observed to be established.
+    # These records are aggregated from 1 second interval raw TcpConnectionStatRecords into records that cover up to 60 second time period.
+    #
+    diffTcpConnections-60s {
+	metric.name = "DiffTcpConnections-60s"
+	metric.description = "Produces differential TcpConnectionStatRecord objects from raw TcpConnectionStatRecord objects at 1 second interval"
+	input.queue.name = "RawTcpConnectionStat-10s"
+	record.type = TcpConnectionStat
+	output.queue.name = "DiffTcpConnections-60s"
+	output.queue.capacity.records = 65536
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	output.queue.type = UpdatingSubscriptionRecordQueue
+	input.record.selector = cumulativeWithQualifier
+	selector.cumulative.flush.time = 60000
+	selector.qualifier.key = "tuple"
+	input.record.processor.name = TcpConnectionStatRecordProcessor
+	input.record.processor.method = merge 
+	periodicity.ms = 1000
+    }
+   
+
+
+    #
+    # Enable monitoring for raw record producers
+    #
     mfsGutsRecordProducerStats-60s {
 	metric.name = "MfsGutsRecordProducerStats"
 	metric.description = "Internal performance information"
