--- a/Distiller-server/src/main/resources/distiller.conf
+++ b/Distiller-server/src/main/resources/distiller.conf
@@ -370,8 +370,7 @@ distiller {
     }
 
     #
-    # Generate differential ThreadResourceRecords
-    # These records are generally only of interest when a bottleneck is identified at a system level and usage of that resource needs to be viewed broken down by process
+    # Distill ThreadResourceRecords for 1 second periods that show less than 10% idle time 
     #
     diffThreadResource-60s {
 	metric.name = "DiffThreadResource-60s"
@@ -388,10 +387,25 @@ distiller {
 	input.record.processor.method = merge 
 	periodicity.ms = 10000
     }
+    highThreadCpu-60s {
+	metric.name = "HighThreadCpu-1s-90%"
+	metric.description = "Produces differential ThreadResourceRecord objects where CPU utilization is > 90% at 60 second interval"
+	input.queue.name = "DiffThreadResource-60s"
+	record.type = ThreadResource
+	output.queue.name = "ThreadResourceEvents-60s"
+	output.queue.capacity.records = 4096
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequential
+	input.record.processor.name = ThreadResourceRecordProcessor
+	input.record.processor.method = isBelow
+	threshold.key = "idlePct"
+	threshold.value = 0.1
+	periodicity.ms = 10000
+    }
 
     #
-    # Generate differential SlimThreadResourceRecords
-    # These records are generally only of interest when a bottleneck is identified at a system level and usage of that resource needs to be viewed broken down by process
+    # Distill SlimThreadResourceRecords for 1 second periods that show less than 10% idle time 
     #
     diffSlimThreadResource-1s {
 	metric.name = "DiffSlimThreadResource-1s"
@@ -408,6 +422,44 @@ distiller {
 	input.record.processor.method = merge 
 	periodicity.ms = 1000
     }
+    highSlimThreadCpu-1s {
+	metric.name = "HighSlimThreadCpu-1s-90%"
+	metric.description = "Produces differential SlimThreadResourceRecord objects where CPU utilization is > 90% at 1 second interval"
+	input.queue.name = "DiffSlimThreadResource-1s"
+	record.type = SlimThreadResource
+	output.queue.name = "SlimThreadResourceEvents-1s"
+	output.queue.capacity.records = 4096
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequential
+	input.record.processor.name = SlimThreadResourceRecordProcessor
+	input.record.processor.method = isBelow
+	threshold.key = "idlePct"
+	threshold.value = 0.1
+	periodicity.ms = 1000
+    }
+
+    #
+    # Distill SlimThreadResourceRecord objects that where MFS threads show >90% CPU utilization at 1 second interval
+    #
+    highMfsThreadCpu-1s {
+	metric.name = "HighMfsThreadCpu-1s-90%"
+	metric.description = "Produces differential SlimThreadResourceRecord objects where the thread name is 'mfs' and CPU utilization is > 90% at 1 second interval"
+	input.queue.name = "SlimThreadResourceEvents-1s"
+	record.type = SlimThreadResource
+	output.queue.name = "HighMfsThreadCpu-1s"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequential
+	input.record.processor.name = SlimThreadResourceRecordProcessor
+	input.record.processor.method = isEqual
+	threshold.key = "commandName"
+	threshold.value = "mfs"
+	periodicity.ms = 1000
+    }
+
+
 
     #
     # Generate differential TcpConnectionStatRecords that indicate the length of time a TCP connection was observed to be established.
@@ -430,7 +482,60 @@ distiller {
 	input.record.processor.method = merge 
 	periodicity.ms = 1000
     }
-   
+
+    #
+    # Generate 60 second moving averages of SystemCpu at 1 second interval
+    #
+    SystemCpu-60sMovingAverage-1sI {
+	metric.name = "SystemCpu-60sMovingAverage-1sI"
+	metric.description = "Produces SystemCpuRecord objects for 60 second moving average at 1 second interval"
+	input.queue.name = "RawSystemCpu-1s"
+	record.type = SystemCpu
+	output.queue.name = "SystemCpu-60sMovingAverage-1sI"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = time
+	input.record.processor.name = SystemCpuRecordProcessor
+	input.record.processor.method = merge
+	time.selector.min.delta = 60000
+	time.selector.max.delta = 80000
+	periodicity.ms = 1000
+    }
+
+    #
+    # Generate 60 second moving averages of SystemMemory at 1 second interval
+    #
+    cumulativeSystemMemory-1s {
+	metric.name = "CumulativeSystemMemory-1s"
+	metric.description = "Produces cumulative SystemMemoryRecord objects from differential SystemMemory objects at 1 second interval"
+	input.queue.name = "DiffSystemMemory-1s"
+	record.type = SystemMemory
+	output.queue.name = "CumulativeSystemMemory-1s"
+	output.queue.capacity.records = 65536
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = cumulative
+	input.record.processor.name = SystemMemoryRecordProcessor
+	input.record.processor.method = merge 
+	periodicity.ms = 1000
+    }
+    SystemMemory-6sMovingAverage-1s {
+	metric.name = "SystemMemory-6sMovingAverage-1sI"
+	metric.description = "Produces SystemMemoryRecord objects for 6 second moving average at 1 second interval"
+	input.queue.name = "CumulativeSystemMemory-1s"
+	record.type = SystemMemory
+	output.queue.name = "SystemMemory-6sMovingAverage-1s"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = time
+	input.record.processor.name = SystemMemoryRecordProcessor
+	input.record.processor.method = merge
+	time.selector.min.delta = 6000
+	time.selector.max.delta = 8000
+	periodicity.ms = 1000
+    }
 
 
     #
