A bunch of things... Did some cleanup in Coordinator Added a scheduling mechanism for MetricActionss Implemented related record selection Additional metric examples in distiller.conf

--- a/Distiller-server/src/main/resources/distiller.conf
+++ b/Distiller-server/src/main/resources/distiller.conf
@@ -422,12 +422,12 @@ distiller {
 	input.record.processor.method = merge 
 	periodicity.ms = 1000
     }
-    highSlimThreadCpu-1s {
-	metric.name = "HighSlimThreadCpu-1s-90%"
+    SlimThreadHighCpu-1s {
+	metric.name = "SlimThreadHighCpu-1s-90%"
 	metric.description = "Produces differential SlimThreadResourceRecord objects where CPU utilization is > 90% at 1 second interval"
 	input.queue.name = "DiffSlimThreadResource-1s"
 	record.type = SlimThreadResource
-	output.queue.name = "SlimThreadResourceEvents-1s"
+	output.queue.name = "SlimThreadHighCpu-1s-90%"
 	output.queue.capacity.records = 4096
 	output.queue.capacity.seconds = 600
 	output.queue.max.producers = 1
@@ -435,23 +435,34 @@ distiller {
 	input.record.processor.name = SlimThreadResourceRecordProcessor
 	input.record.processor.method = isBelow
 	threshold.key = "idlePct"
-	threshold.value = 0.1
+	threshold.value = 1
 	periodicity.ms = 1000
     }
 
     #
     # Distill SlimThreadResourceRecord objects that where MFS threads show >90% CPU utilization at 1 second interval
+    # Use related selector to also distill raw MfsGuts records generated within a 10 second window around the high MFS thread CPU utilization
     #
-    highMfsThreadCpu-1s {
-	metric.name = "HighMfsThreadCpu-1s-90%"
-	metric.description = "Produces differential SlimThreadResourceRecord objects where the thread name is 'mfs' and CPU utilization is > 90% at 1 second interval"
-	input.queue.name = "SlimThreadResourceEvents-1s"
+     mfsGutsDuringMfsThreadHighCpu-10sW-1sI {
+	metric.name = "MfsGutsDuringMfsThreadHighCpu-10sW-1sI"
+	metric.description = "Produces raw MfsGutsRecord objects when a SlimThreadResourceRecord object shows an MFS thread with less than 10% idle time"
+	input.queue.name = "SlimThreadHighCpu-1s-90%"
 	record.type = SlimThreadResource
-	output.queue.name = "HighMfsThreadCpu-1s"
+	output.queue.name = "MfsThreadHighCpu-1sI"
 	output.queue.capacity.records = 600
 	output.queue.capacity.seconds = 600
 	output.queue.max.producers = 1
+	related.output.queue.record.capacity = 600
+	related.output.queue.second.capacity = 600
+	related.output.queue.max.producers = 1
 	input.record.selector = sequential
+	related.selector.enabled = true
+	selector.qualifier.key = "duration"
+	selector.qualifier.value = 10000
+	selector.related.input.queue.name = "RawMfsGuts-1s"
+	selector.related.output.queue.name = "MfsGutsDuringMfsThreadHighCpu-10sW-1sI"
+	selector.related.name = BasicRelatedRecordSelector
+	selector.related.method = timeBasedWindow
 	input.record.processor.name = SlimThreadResourceRecordProcessor
 	input.record.processor.method = isEqual
 	threshold.key = "commandName"
@@ -478,6 +489,7 @@ distiller {
 	input.record.selector = cumulativeWithQualifier
 	selector.cumulative.flush.time = 60000
 	selector.qualifier.key = "tuple"
+	updating.subscription.queue.key = "tuple"
 	input.record.processor.name = TcpConnectionStatRecordProcessor
 	input.record.processor.method = merge 
 	periodicity.ms = 1000
