--- a/Distiller-server/src/main/resources/distiller.conf
+++ b/Distiller-server/src/main/resources/distiller.conf
@@ -587,14 +587,14 @@ distiller {
     #
     # Enable monitoring for raw record producers
     #
-#    mfsGutsRecordProducerStats-60s {
-#	metric.name = "MfsGutsRecordProducerStats"
-#	metric.description = "Internal performance information"
-#	record.type = RawRecordProducerStat
-#	metric.enabled=true
-#	raw.record.producer.name = "MfsGutsRecordProducer"
-#	periodicity.ms = 60000
-#    }
+    mfsGutsRecordProducerStats-60s {
+	metric.name = "MfsGutsRecordProducerStats"
+	metric.description = "Internal performance information"
+	record.type = RawRecordProducerStat
+	metric.enabled=true
+	raw.record.producer.name = "MfsGutsRecordProducer"
+	periodicity.ms = 60000
+    }
     procRecordProducerStats-10s {
         metric.name = "ProcRecordProducerStats"
 	metric.description = "Internal performance information"
