Couple things Fix a bug in related record selection introduced with changeset to allow enable/disable/create/delete for metrics on the fly Implement a new type of record processing, Diffable, which is a framework to allow for tracking how a particular metric changes value over time

--- a/Distiller-server/src/main/resources/distiller.conf
+++ b/Distiller-server/src/main/resources/distiller.conf
@@ -583,6 +583,55 @@ distiller {
 	periodicity.ms = 1000
     }
 
+    #
+    # Read 1-second-interval differential SystemCpuRecord objects as input, output DifferentialValueRecord objects as output detailing the magnitude of change in the idlePct parameter of input records over the timeperiod of the consecutive input records
+    # Read the DifferentialValueRecord objects as input and compare to threshold, passthrough input records to output queue if comparison is true and perform related selection of raw input records from first processing step
+    #
+    DifferentialSystemCpuIdle-Consecutive-1sW-1sI {
+	metric.name = "DifferentialSystemCpuIdle-Consecutive-1sW-1sI"
+	metric.description = "Produces DifferentialValueRecords detailing the magnitude of change in idlePct from consecutive differential SystemCpuRecord objects"
+	input.queue.name = "DiffSystemCpu-1sI"
+	record.type = SystemCpu
+	output.queue.name = "DifferentialSystemCpuIdle-Consecutive-1sW-1sI"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequential
+	input.record.processor.name = SystemCpuRecordProcessor
+	input.record.processor.method = differentialValue
+	threshold.key = "%idle"
+	metric.enabled=true
+	periodicity.ms = 1000
+    }
+    HighDifferentialSystemCpuIdle-1sW-1sI {
+	metric.name = "HighDifferentialSystemCpuIdle-1sW-1sI"
+	metric.description = "Passes the input DifferentialValueRecords to the output queue if they show idle CPU percentage change by more than 5%, select related SystemCpuRecord objects that showed this condition."
+	input.queue.name = "DifferentialSystemCpuIdle-Consecutive-1sW-1sI"
+	record.type = DifferentialValue
+	output.queue.name = "HighDifferentialSystemCpuIdle-1sW-1sI"
+	output.queue.capacity.records = 600
+	output.queue.capacity.seconds = 600
+	output.queue.max.producers = 1
+	input.record.selector = sequential
+	input.record.processor.name = DifferentialValueRecordProcessor
+	input.record.processor.method = isAbove
+	threshold.key = "%idle"
+	threshold.value = 0.05
+	metric.enabled=true
+	periodicity.ms = 1000
+	related.output.queue.record.capacity = 600
+	related.output.queue.second.capacity = 600
+	related.output.queue.max.producers = 1
+	related.selector.enabled = true
+	selector.qualifier.key = "duration"
+	selector.qualifier.value = 2000
+	selector.related.input.queue.name = "DiffSystemCpu-1sI"
+	selector.related.output.queue.name = "DiffSystemCpuDuringHighIdleDifferential-2sW-1sI"
+	selector.related.name = BasicRelatedRecordSelector
+	selector.related.method = timeBasedWindow
+    }
+
+
 
     #
     # Enable monitoring for raw record producers
