--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,38 @@
 	<name>MapRDistiller</name>
 	<packaging>pom</packaging>
 
+	<properties>
+		<slf4j.version>1.7.6</slf4j.version>
+		<!-- current log4j 2 release -->
+		<log4j.version>2.0.1</log4j.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
 		</dependency>
+		<!-- Binding for Log4J -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<!-- Log4j API and Core implementation required for binding -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+
 	</dependencies>
-	
+
 	<modules>
 		<module>Distiller-server</module>
 	</modules>
